k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app01
  name: app01
  namespace: demoapp01
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app01
